Fix issues based on comment

--- a/course-04/project/c4-final-project-starter-code/backend/serverless.yml
+++ b/course-04/project/c4-final-project-starter-code/backend/serverless.yml
@@ -100,9 +100,7 @@ functions:
           path: todos
           cors: true
           authorizer: Auth
-          request:
-            schema:
-              'application/json': ${file(models/create-todo-model.json)}
+          reqValidatorName: RequestBodyValidator
           documentation:
             summary: Create a new todo
             description: Create a new todo
@@ -130,9 +128,7 @@ functions:
           path: todos/{todoId}
           cors: true
           authorizer: Auth
-          request:
-            schema:
-              'application/json': ${file(models/update-todo-model.json)}
+          reqValidatorName: RequestBodyValidator
           documentation:
             summary: Update todo
             description: Update todo
