--- a/course-04/project/c4-final-project-starter-code/backend/package.json
+++ b/course-04/project/c4-final-project-starter-code/backend/package.json
@@ -17,17 +17,17 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.17",
     "@types/jsonwebtoken": "^8.3.2",
-    "@types/node": "^18.11.16",
+    "@types/node": "^10.17.60",
     "@types/uuid": "^8.3.4",
     "aws-sdk": "^2.433.0",
     "serverless-aws-documentation": "^1.1.0",
-    "serverless-iam-roles-per-function": "^3.2.0",
-    "serverless-plugin-canary-deployments": "^0.8.0",
+    "serverless-iam-roles-per-function": "^3.2.0-e97ab49",
+    "serverless-plugin-canary-deployments": "^0.4.8",
     "serverless-plugin-tracing": "^2.0.0",
-    "serverless-reqvalidator-plugin": "^2.0.0",
-    "serverless-webpack": "^5.11.0",
-    "ts-loader": "^5.3.3",
-    "typescript": "^4.9.4",
+    "serverless-reqvalidator-plugin": "^1.0.4",
+    "serverless-webpack": "^5.7.1",
+    "ts-loader": "^4.4.2",
+    "typescript": " ^3.4.1",
     "webpack": "^4.29.6"
   },
   "author": "Ivan Mushketyk",
